# google-plugin

./: README.md  __init__.py  auth.py  calendar.py  gcal.py  gdocs.py  gdrive.py  gmail.py  gpeople.py  oauth.py  protoagent.plugin.yaml  pyproject.toml  requirements-dev.txt  view.py
.github/workflows/: ci.yml
tests/: conftest.py  pytest.ini  test_drive.py  test_google.py  test_oauth.py  test_plugin.py  test_services.py  test_triage.py  test_v050.py
