[project]
name = "google-plugin"
version = "0.4.0"
description = "Google Workspace plugin for protoAgent — Gmail (read + draft) + Calendar (read) over a service-agnostic OAuth/REST core, built to grow."
requires-python = ">=3.11"

# Runtime deps come from the protoAgent host (langchain-core, fastapi, httpx) —
# this plugin adds none, so the manifest's requires_pip stays empty.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E501", "E731", "E741"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
